RESOLVED FIXED73157
[TexMapper][WK2][Qt] Simple opacity animations are not working
https://bugs.webkit.org/show_bug.cgi?id=73157
Summary [TexMapper][WK2][Qt] Simple opacity animations are not working
Igor Trindade Oliveira
Reported 2011-11-26 06:10:44 PST
Opacity animations from 0 to 1 are not working in QtWebKit.
Attachments
Patch (2.87 KB, patch)
2011-11-26 06:30 PST, Igor Trindade Oliveira
no flags
Igor Trindade Oliveira
Comment 1 2011-11-26 06:30:24 PST
Created attachment 116656 [details] Patch Proposed patch.
WebKit Review Bot
Comment 2 2011-11-26 10:01:10 PST
Comment on attachment 116656 [details] Patch Clearing flags on attachment: 116656 Committed r101196: <http://trac.webkit.org/changeset/101196>
WebKit Review Bot
Comment 3 2011-11-26 10:01:14 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.